--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,13 @@ jobs:
       - name: Get source
         uses: actions/checkout@v3
 
+      - name: Sanitize tag name for Docker tag
+        id: sanitize
+        run: |
+          # Replace / with - in tag name to make it valid for Docker tags
+          SANITIZED_TAG=$(echo "${{ github.ref_name }}" | sed 's/\//-/g')
+          echo "tag_name=$SANITIZED_TAG" >> $GITHUB_OUTPUT
+
       - name: Build
         id: build-image
         uses: redhat-actions/buildah-build@v2
@@ -28,11 +35,11 @@ jobs:
           image: csusters/csust-got
           tags: |
             latest
-            ${{ github.ref_name }}
+            ${{ steps.sanitize.outputs.tag_name }}
           containerfiles: |
             ./Dockerfile
           build-args: |
-            TAG=${{ github.ref_name }}
+            TAG=${{ steps.sanitize.outputs.tag_name }}
             BRANCH=release
           layers: true
 
