--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -44,8 +44,8 @@ jobs:
             ./Dockerfile
           layers: true
 
-      - name: Push To harbor
-        id: push-to-harbor 
+      - name: Push To registry
+        id: push-to-registry
         uses: CSUSTers/push-to-registry@main
         with:
           image: ${{ steps.build-image.outputs.image }}
@@ -54,8 +54,3 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
           retry: 1000
-          
-      - name: Restart Kubernetes Deployment
-        id: restart-pod
-        run: |
-          if [ "${{ github.ref }}" == "refs/heads/dev" ]; then NAME="csust-got"; elif [ "${{ github.ref }}" == "refs/heads/master" ]; then NAME="csust-got-prod"; fi; curl -sL -X PUT -H "Content-Type: application/yaml" -H "Cookie: ${{ secrets.KubeCookie}}" -d '{"kind":"deployments","namespace":"csust","name":"'"$NAME"'"}' "${{ secrets.KubeURL}}" | jq -r '.status.availableReplicas' | xargs -I{} echo "AvailableReplicas: {}"
