feat: mcpo支持递归参数解析

--- a/config.yaml
+++ b/config.yaml
@@ -136,8 +136,8 @@ chats:
       # [新增] 是否启用流式输出（打字机效果）。默认为 false。
       stream_output: true
       # [新增] 流式输出时，两次编辑消息的最小时间间隔。用于控制速率，防止被 Telegram 限制。
-      # 建议值: "750ms"
-      edit_interval: "750ms"
+      # 建议值: "1s"
+      edit_interval: "1s"
     temperature: 0.7
     place_holder: "⏳"
     error_message: "😔很抱歉，我无法处理您的请求"
